Revisited all MCU build systems and tooling for Windows and Linux Properly tested and documented support of MCU-related tooling on both Windows and Linux Added Build/Debugging instructtions for Camera-MCU - Full compilation, flashing and debugging support in both Linux and Windows - Added detailed explanation of Boot Mode configuration Updated Build/Debugging instructions for Controller - Brought explicit WCH-Link support back - Full compilation support in both Linux and Windows - Flashing and debugging support is mostly reserved for Linux - Flashing mostly using Server Software on Windows - Debugging only with WSL or MounRiver Studio on Windows Updated ARM & RISC-V toolchains to GCC v15 - Required some code fixes Added prebuilt camera drivers Added note for use of WSL for Camera-SBC piCore build system

--- a/camera_mcu/.gitignore
+++ b/camera_mcu/.gitignore
@@ -3,5 +3,9 @@
 .codechecker
 compile_commands.json
 
-# Build systems
+# Build System Configuration
+# Can't put all path config in small files, several places in .vscode also need to be updated
+toolpath.make
+
+# Builds
 build/
